# builder-02-amm

./: Anchor.toml  Cargo.toml  README.md  justfile
.githooks/: pre-commit
crates/amm-math/: Cargo.toml
crates/amm-math/src/: error.rs  lib.rs  liquidity.rs  math.rs  swap.rs  types.rs
docs/: design.md  testing.md  toy-amm.spec.md
docs/security/: README.md
docs/security/exercises/: 001-what-is-going-on.md
docs/security/issues/: 001-lock-unlock-timing-attack.md
docs/security/responses/: 001-lock-unlock-timing-attack.md
docs/testing/: actors-as-first-class-citizens.md  test-report.md
programs/amm/: Cargo.toml
programs/amm/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  test_helpers.rs
programs/amm/src/instructions/: add_liquidity.rs  initialize.rs  remove_liquidity.rs  set_locked.rs  swap.rs  update_authority.rs  update_fee.rs
programs/amm/tests/: test_add_liquidity.rs  test_admin.rs  test_edge_cases.rs  test_inflation_attack.rs  test_initialize.rs  test_lifecycle.rs  test_lock_unlock_attack.rs  test_remove_liquidity.rs  test_swap.rs
programs/amm/tests/common/: mod.rs
src/: error.rs  lib.rs  liquidity.rs  math.rs  swap.rs  types.rs
