[workspace]
resolver = "2"
members = [
    "crates/*",
    "programs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
proptest = "1"

# Solana-tuned release profile. overflow-checks stays on in release because
# the on-chain program runs in release mode and silent wraparound in AMM math
# is unacceptable. lto = "fat" + codegen-units = 1 shrink the .so significantly.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
