[package]
name = "amm"
version.workspace = true
# Anchor 1.0.x macros are tested against edition 2021; the rest of the
# workspace is on 2024. Explicit override keeps macro expansion happy.
edition = "2021"
description = "Toy constant-product AMM (see docs/toy-amm.spec.md)"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Enable in tests with `cargo test -p amm --features test-helpers`. Brings in
# anchor-litesvm and exposes per-instruction Bundle structs + BundledPubkeys
# impls so tests can `program.build_ix(bundle, instruction::Foo { ... })`.
test-helpers = ["dep:anchor-litesvm"]

[dependencies]
# init-if-needed is required because user_lp ATA gets created on first deposit.
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
amm-math = { path = "../../crates/amm-math" }
# Optional: pulled in only by the `test-helpers` feature so the BPF binary
# stays clean. anchor_litesvm re-exports the `Bundle` and `BundledPubkeys`
# derives, so this single dep is enough.
anchor-litesvm = { path = "/home/amal/oss/upstream/anchor-litesvm/crates/anchor-litesvm", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
